--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel='stylesheet' href='stylesheet.css'>
+	<link rel='stylesheet' href='./stylesheet.css'>
 </head>
 <body>
-
+	<header></header>
+	<main>
+		<h1>Hello world!</h1>
+	</main>
 </body>
 </html>
