--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Sam | Web Design @ MAXX</title>
 	<link rel='stylesheet' href='./stylesheet.css'>
 </head>
 <body>
@@ -11,5 +11,8 @@
 	<main>
 		<h1>Hello world!</h1>
 	</main>
+	<footer>
+		<p>&copy;2016 Sam&apos; Web Dev All Rights Reserved</p>
+	</footer>
 </body>
 </html>
