fix: make fonts, flex, and imgs play nice with mobile

--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
 </head>
 <body>
 	<div class="flex flex-col items-center w-full gap-16 font-helv">
-		<header class="w-full z-10">
-			<div class="flex justify-between items-center w-full pt-8 px-32">
-				<img src="imgs/logo.png" alt="This is the MAXX Potential logo." class="max-h-24 w-auto" />
+		<header class="w-full">
+			<div class="flex justify-between items-center w-full pt-8 px-8 lg:px-32">
+				<img src="imgs/logo.png" alt="This is the MAXX Potential logo." class="max-h-12 sm:max-h-16 w-auto" />
 				<hgroup class="block">
-					<h1 class="text-4xl font-bold">HELLO, I&apos;M SAM.</h1>
-					<p class="text-4xl font-light">Web Designer</p>
+					<h1 class="text-xl sm:text-4xl font-bold">HELLO, I&apos;M SAM.</h1>
+					<p class="text-xl sm:text-4xl font-light">Web Designer</p>
 				</hgroup>
 		</div>
 		</header>
-		<main class="flex flex-col items-center gap-16">
+		<main class="w-full flex flex-col items-center gap-16 px-4">
 			<h1 class="sr-only">This is my work as a web designer!</h1>
-			<div class="w-full h-[32rem] overflow-hidden">
-				<img src="imgs/hero1.jpg" alt="This is an aerial photo of a deep blue lake, a forest, and the bottom of a mountain with clouds obscuring the upper heights of the slope." class="w-full -translate-y-[32rem] h-auto">
+			<div class="w-full max-w-screen-lg aspect-video overflow-hidden">
+				<img src="imgs/hero1.jpg" alt="This is an aerial photo of a deep blue lake, a forest, and the bottom of a mountain with clouds obscuring the upper heights of the slope." class="bottom-0 w-full h-auto">
 			</div>
-			<section class='flex flex-col gap-8'>
-				<h2 class="font-helv text-5xl font-bold text-center">PORTFOLIO</h2>
-				<ul class="*:block flex gap-8">
+			<section class='flex flex-col gap-8 w-full overflow-hidden'>
+				<h2 class="font-helv text-3xl sm:text-5xl font-bold text-center">PORTFOLIO</h2>
+				<ul class="*:block flex justify-center flex-wrap overflow-hidden gap-8 w-full">
 					<li>
 						<section class='flex flex-col items-center gap-4'>
 							<hgroup class="text-center border-b-2 border-b-maxxblue p-4 w-3/4">
-								<h3 class='text-2xl font-light'>TECHNOLINE</h3>
-								<p class='font-bask italic text-2xl text-maxxred'>technoline.com</p>
+								<h3 class='text-xl sm:text-2xl font-light'>TECHNOLINE</h3>
+								<p class='font-bask italic text-lg sm:text-2xl text-maxxred'>technoline.com</p>
 							</hgroup>
 							<div class="aspect-video w-96 overflow-hidden drop-shadow">
 								<img src="imgs/company_photo1.jpg" alt="" class="w-full h-auto"/>
@@ -42,8 +42,8 @@
 					<li>
 						<section class='flex flex-col items-center gap-4'>
 							<hgroup class="text-center border-b-2 border-b-maxxblue p-4 w-3/4">
-								<h3 class='text-2xl font-light'>MAJESTIQUE</h3>
-								<p class='font-bask italic text-2xl text-maxxred'>majestique.com</p>
+								<h3 class='text-xl sm:text-2xl font-light'>MAJESTIQUE</h3>
+								<p class='font-bask italic text-lg sm:text-2xl text-maxxred'>majestique.com</p>
 							</hgroup>
 							<div class="aspect-video w-96 overflow-hidden drop-shadow">
 								<img src="imgs/company_photo2.jpg" alt="" class="w-full h-auto"/>
@@ -53,8 +53,8 @@
 					<li>
 						<section class='flex flex-col items-center gap-4'>
 							<hgroup class="text-center border-b-2 border-b-maxxblue p-4 w-3/4">
-								<h3 class='text-2xl font-light'>SILVERZIM</h3>
-								<p class='font-bask italic text-2xl text-maxxred'>silverzim.com</p>
+								<h3 class='text-xl sm:text-2xl font-light'>SILVERZIM</h3>
+								<p class='font-bask italic text-lg sm:text-2xl text-maxxred'>silverzim.com</p>
 							</hgroup>
 							<div class="aspect-video w-96 overflow-hidden drop-shadow">
 								<img src="imgs/company_photo3.jpeg" alt="" class="w-full h-auto"/>
