fix: widen hero image and adjust fonts on mobile

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 		</header>
 		<main class="w-full flex flex-col items-center gap-16 px-4">
 			<h1 class="sr-only">This is my work as a web designer!</h1>
-			<div class="w-full max-w-screen-lg aspect-video overflow-hidden">
-				<img src="imgs/hero1.jpg" alt="This is an aerial photo of a deep blue lake, a forest, and the bottom of a mountain with clouds obscuring the upper heights of the slope." class="bottom-0 w-full h-auto">
+			<div class="w-full aspect-video md:aspect-[12/5] overflow-hidden">
+				<img src="imgs/hero1.jpg" alt="This is an aerial photo of a deep blue lake, a forest, and the bottom of a mountain with clouds obscuring the upper heights of the slope." class="absolute bottom-0 w-full h-auto">
 			</div>
 			<section class='flex flex-col gap-8 w-full overflow-hidden'>
-				<h2 class="font-helv text-3xl sm:text-5xl font-bold text-center">PORTFOLIO</h2>
+				<h2 class="font-helv text-2xl sm:text-4xl font-bold text-center">PORTFOLIO</h2>
 				<ul class="*:block flex justify-center flex-wrap overflow-hidden gap-8 w-full">
 					<li>
 						<section class='flex flex-col items-center gap-4'>
